# Nexus-Linux

./: .gitattributes  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  README.md  VERIFICATION.md  build.sh  index.html  pyproject.toml  requirements-dev.txt  validate.py
.github/workflows/: build-iso.yml  ci.yml
debian/: changelog  control  nexus-linux.install  postinst  rules
debian/install.d/: 00-base-system.sh  02-disable-gnome-initial-setup.sh  10-desktop-setup.sh  20-gaming-setup.sh
live-build/: .gitignore  README.md  build.sh
live-build/auto/: clean  config
live-build/config/hooks/live/: 0100-add-security-repo.hook.chroot
live-build/config/includes.chroot/etc/gdm3/: daemon.conf
live-build/config/includes.chroot/etc/skel/.config/autostart/: nexus-installer.desktop
live-build/config/includes.chroot/etc/skel/Desktop/: install-nexus-linux.desktop
live-build/config/includes.chroot/usr/share/applications/: nexus-backup.desktop  nexus-center.desktop  nexus-driver.desktop  nexus-gaming.desktop  nexus-installer.desktop  nexus-settings.desktop  nexus-shell-manager.desktop  nexus-store.desktop  nexus-update.desktop
live-build/config/package-lists/: nexus-desktop.list.chroot
nexus-backup/: README.md  pyproject.toml
nexus-backup/src/nexus_backup/: app.py  main.py
nexus-backup/src/nexus_backup/core/: __init__.py  backup_manager.py
nexus-backup/src/nexus_backup/ui/: __init__.py  main_window.py
nexus-center/: README.md  pyproject.toml
nexus-center/src/nexus_center/: app.py  main.py  ui.py
nexus-center/src/nexus_center/ui/: __init__.py  main_window.py
nexus-driver/: README.md  pyproject.toml
nexus-driver/src/nexus_driver/: app.py  main.py
nexus-driver/src/nexus_driver/core/: __init__.py  driver_catalog.py
nexus-driver/src/nexus_driver/ui/: __init__.py  main_window.py
nexus-gaming/: README.md  pyproject.toml
nexus-gaming/src/nexus_gaming/: app.py  main.py
nexus-gaming/src/nexus_gaming/core/: __init__.py  discord_manager.py  exe_runner.py  gaming_catalog.py  proton_ge_manager.py
nexus-gaming/src/nexus_gaming/ui/: __init__.py  main_window.py
nexus-installer/: README.md  pyproject.toml
nexus-installer/src/nexus_installer/: app.py  main.py
nexus-installer/src/nexus_installer/core/: __init__.py  account_manager.py  disk_manager.py  efi_manager.py  install_engine.py  locale_manager.py  target_installer.py
nexus-installer/src/nexus_installer/ui/: __init__.py  main_window.py
nexus-installer/src/nexus_installer/ui/pages/: __init__.py  account_page.py  desktop_page.py  partition_page.py  profile_page.py  progress_page.py  region_page.py  summary_page.py  welcome_page.py
nexus-settings/: README.md  pyproject.toml
nexus-settings/src/nexus_settings/: app.py  main.py
nexus-settings/src/nexus_settings/core/: __init__.py  settings_manager.py
nexus-settings/src/nexus_settings/ui/: __init__.py  main_window.py
nexus-shell-manager/: README.md  pyproject.toml
nexus-shell-manager/src/nexus_shell_manager/: app.py  main.py
nexus-shell-manager/src/nexus_shell_manager/core/: __init__.py  desktop_manager.py
nexus-shell-manager/src/nexus_shell_manager/ui/: __init__.py  main_window.py
nexus-store/: README.md  pyproject.toml
nexus-store/src/nexus_store/: app.py  main.py
nexus-store/src/nexus_store/core/: __init__.py  store_catalog.py
nexus-store/src/nexus_store/ui/: __init__.py  main_window.py
nexus-update/: README.md  pyproject.toml
nexus-update/src/nexus_update/: app.py  main.py
nexus-update/src/nexus_update/core/: __init__.py  github_update_manager.py  update_manager.py
nexus-update/src/nexus_update/ui/: __init__.py  main_window.py
shared/: pyproject.toml
shared/nexus_common/: __init__.py  base.py  constants.py  package_cache.py  theme.py  ui.py
tests/: test_debian_packaging.py  test_gui_smoke.py  test_live_build.py  test_nexus_common.py  test_nexus_gaming_and_update.py  test_nexus_installer.py  test_packaging_metadata.py  test_project_structure.py  test_shared_theme_and_cache.py
