[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-linux"
version = "0.1.0"
description = "Modular Linux distribution based on Ubuntu/Debian"
requires-python = ">=3.11"
authors = [
    {name = "Nexus Linux Team", email = "nexus@example.com"}
]
license = {text = "MIT"}
dependencies = ["PySide6>=6.8.0"]

# This root pyproject.toml exists only to configure pytest and repo-wide dev
# tooling; it is not built or published as its own distribution. Each
# installable component (shared/nexus_common and every nexus-* app) has its
# own pyproject.toml under its respective directory.
[tool.setuptools]
packages = []

[tool.pytest.ini_options]
pythonpath = [".", "shared"]
testpaths = ["tests"]
addopts = "-v --tb=short"
