[project]
name = "nexus-backup"
version = "0.1.0"
description = "Snapshots and restore workflows."
requires-python = ">=3.11"
dependencies = ["PySide6>=6.8.0", "nexus-common"]

[project.scripts]
nexus-backup = "nexus_backup.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
