[project]
name = "nexus-center"
version = "0.1.0"
description = "Central settings and administration hub."
requires-python = ">=3.11"
dependencies = ["PySide6>=6.8.0", "nexus-common"]

[project.scripts]
nexus-center = "nexus_center.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
