[project]
name = "nexus-driver"
version = "0.1.0"
description = "Driver and firmware management."
requires-python = ">=3.11"
dependencies = ["PySide6>=6.8.0", "nexus-common"]

[project.scripts]
nexus-driver = "nexus_driver.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
