[project]
name = "nexus-shell-manager"
version = "0.1.0"
description = "Desktop environment installer and session manager."
requires-python = ">=3.11"
dependencies = ["PySide6>=6.8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
