[project]
name = "nexus-store"
version = "0.1.0"
description = "Application marketplace."
requires-python = ">=3.11"
dependencies = ["PySide6>=6.8.0", "nexus-common"]

[project.scripts]
nexus-store = "nexus_store.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
