[project]
name = "nexus-update"
version = "0.1.0"
description = "Update, rollback, and kernel management."
requires-python = ">=3.11"
dependencies = ["PySide6>=6.8.0", "nexus-common"]

[project.scripts]
nexus-update = "nexus_update.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
