[project]
name = "nexus-common"
version = "0.1.0"
description = "Shared infrastructure and utilities for Nexus Linux applications."
requires-python = ">=3.11"
dependencies = ["PySide6>=6.8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["nexus_common"]
